--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -35,5 +35,7 @@
 	"apihelp-collection+removeitem-example": "Remove an item from the collection provided an index or index 0 by default.",
 	"apihelp-collection+removeitem-summary": "Api module for removing an item from the collection index-wise via the Special:Book page.",
 	"apihelp-collection-param-submodule": "Submodule for performing various operations on a wiki user's collection.",
-	"apihelp-collection-summary": "Api module for performing various operations on a wiki user's collection."
+	"apihelp-collection-summary": "Api module for performing various operations on a wiki user's collection.",
+	"apihelp-collection+getbookcreatorboxcontent-example": "Get book creator box content of the user's collection.",
+	"apihelp-collection+getbookcreatorboxcontent-summary": "Api submodule for grabbing the box content of the user's book creator box special page."
 }
