Api: Reorganize `collection` api operations to use submodules
The submodules are all listed in the ApiCollection.php file.

Change-Id: Ifaa9a2109a1385626cc7f676976d0558ccc0ef73

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -4,34 +4,36 @@
 			"Derick Alangi"
 		]
 	},
-	"apihelp-collection-list-example": "List pages currently in the collection.",
-	"apihelp-collection-list-summary": "Api module for listing current pages in a collection",
-	"apihelp-collection-addarticle-example": "Add an article to the collection.",
-	"apihelp-collection-addarticle-summary": "Api module for adding and article to the collection",
-	"apihelp-collection-settitles-example": "Set a title and subtitle to the collection",
-	"apihelp-collection-settitles-settings-example": "Set a title, subtitle, and settings to the collection",
-	"apihelp-collection-settitles-summary": "Api module for setting a title, subtitle, and settings for a collection",
+	"apihelp-collection+getcollection-example": "List pages currently in the collection.",
+	"apihelp-collection+getcollection-summary": "Api module for listing current pages in a collection",
+	"apihelp-collection+addarticle-example": "Add an article to the collection.",
+	"apihelp-collection+addarticle-summary": "Api module for adding and article to the collection",
+	"apihelp-collection+settitles-example": "Set a title and subtitle to the collection",
+	"apihelp-collection+settitles-settings-example": "Set a title, subtitle, and settings to the collection",
+	"apihelp-collection+settitles-summary": "Api module for setting a title, subtitle, and settings for a collection",
 	"coll-api-addarticle-article-not-added": "Article was not added to collection. Make sure the title is in the specified namespace or check if the article already exist in the collection.",
-	"apihelp-collection-removearticle-example": "Remove an article from the collection.",
-	"apihelp-collection-removearticle-summary": "Api module for removing an article from the collection",
+	"apihelp-collection+removearticle-example": "Remove an article from the collection.",
+	"apihelp-collection+removearticle-summary": "Api module for removing an article from the collection",
 	"coll-api-removearticle-article-not-removed": "Article was not remove from collection. Make sure the title is in the specified namespace or check if the article does not exist in the collection.",
-	"apihelp-collection-addcategory-example": "Add articles from a given category to a user's collection.",
-	"apihelp-collection-addcategory-summary": "Api module for adding articles from a giving category to a user's collection.",
+	"apihelp-collection+addcategory-example": "Add articles from a given category to a user's collection.",
+	"apihelp-collection+addcategory-summary": "Api module for adding articles from a giving category to a user's collection.",
 	"coll-api-addcategory-category-does-not-exist": "The category you are trying to add articles from does not exist, is invalid or has articles more than the limit specified.",
-	"apihelp-collection-addchapter-example": "Add a chapter to the collection.",
-	"apihelp-collection-addchapter-summary": "Api module for adding a chapter to the collection",
-	"apihelp-collection-renamechapter-example": "Rename a chapter in the user's collection.",
-	"apihelp-collection-renamechapter-summary": "Api module for renaming a chapter in the user's collection",
-	"apihelp-collection-clear-example": "Clears collection and suggestions",
-	"apihelp-collection-clear-summary": "Api module for clearing the collection and suggestions",
-	"apihelp-collection-setsorting-example": "In a collection of 3 items, Swap the first and second item",
-	"apihelp-collection-setsorting-deletion-example": "In a collection of 3 items, make the 3rd item first and delete the 2nd item",
-	"apihelp-collection-setsorting-summary": "Api module for reordering items in a collection",
-	"apihelp-collection-setsorting-param-items": "Items should be listed using their old index and ordered by their new position",
-	"apihelp-collection-sortitems-example": "Sort collection articles alphabetically",
-	"apihelp-collection-sortitems-summary": "Api module to sort articles in collection alphabetically. Articles within chapters are grouped and sorted together",
-	"apihelp-collection-getpopupdata-example": "Gets a popup to add/remove an article to the collection",
-	"apihelp-collection-getpopupdata-summary": "Api module to get data and html to construct a popup",
-	"apihelp-collection-removeitem-example": "Remove an item from the collection provided an index or index 0 by default.",
-	"apihelp-collection-removeitem-summary": "Api module for removing an item from the collection index-wise via the Special:Book page."
+	"apihelp-collection+addchapter-example": "Add a chapter to the collection.",
+	"apihelp-collection+addchapter-summary": "Api module for adding a chapter to the collection",
+	"apihelp-collection+renamechapter-example": "Rename a chapter in the user's collection.",
+	"apihelp-collection+renamechapter-summary": "Api module for renaming a chapter in the user's collection",
+	"apihelp-collection+clearcollection-example": "Clears collection and suggestions",
+	"apihelp-collection+clearcollection-summary": "Api module for clearing the collection and suggestions",
+	"apihelp-collection+setsorting-example": "In a collection of 3 items, Swap the first and second item",
+	"apihelp-collection+setsorting-deletion-example": "In a collection of 3 items, make the 3rd item first and delete the 2nd item",
+	"apihelp-collection+setsorting-summary": "Api module for reordering items in a collection",
+	"apihelp-collection+setsorting-param-items": "Items should be listed using their old index and ordered by their new position",
+	"apihelp-collection+sortitems-example": "Sort collection articles alphabetically",
+	"apihelp-collection+sortitems-summary": "Api module to sort articles in collection alphabetically. Articles within chapters are grouped and sorted together",
+	"apihelp-collection+getpopupdata-example": "Gets a popup to add/remove an article to the collection",
+	"apihelp-collection+getpopupdata-summary": "Api module to get data and html to construct a popup",
+	"apihelp-collection+removeitem-example": "Remove an item from the collection provided an index or index 0 by default.",
+	"apihelp-collection+removeitem-summary": "Api module for removing an item from the collection index-wise via the Special:Book page.",
+	"apihelp-collection-param-submodule": "Submodule for performing various operations on a wiki user's collection.",
+	"apihelp-collection-summary": "Api module for performing various operations on a wiki user's collection."
 }
