Fixes in API messages
* Consistent all-caps spelling of "API".
* Replace "article" with "page": this extension is also
  used on sites other than Wikipedia.
* Various minor spelling and grammar fixes.

Change-Id: If75953c38b51f0d3d5ef3a7bc33d26af0c7a3f20

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -5,46 +5,46 @@
 		]
 	},
 	"apihelp-collection+getcollection-example": "List pages currently in the collection.",
-	"apihelp-collection+getcollection-summary": "Api module for listing current pages in a collection",
-	"apihelp-collection+addarticle-example": "Add an article to the collection.",
-	"apihelp-collection+addarticle-summary": "Api module for adding and article to the collection",
-	"apihelp-collection+settitles-example": "Set a title and subtitle to the collection",
-	"apihelp-collection+settitles-settings-example": "Set a title, subtitle, and settings to the collection",
-	"apihelp-collection+settitles-summary": "Api module for setting a title, subtitle, and settings for a collection",
-	"coll-api-addarticle-article-not-added": "Article was not added to collection. Make sure the title is in the specified namespace or check if the article already exist in the collection.",
-	"apihelp-collection+removearticle-example": "Remove an article from the collection.",
-	"apihelp-collection+removearticle-summary": "Api module for removing an article from the collection",
-	"coll-api-removearticle-article-not-removed": "Article was not remove from collection. Make sure the title is in the specified namespace or check if the article does not exist in the collection.",
-	"apihelp-collection+addcategory-example": "Add articles from a given category to a user's collection.",
-	"apihelp-collection+addcategory-summary": "Api module for adding articles from a giving category to a user's collection.",
-	"apihelp-collection+suggestarticleaction-example": "Adds an article to the collection and suggestions",
-	"apihelp-collection+suggestarticleaction-summary": "Api module to interact with suggestions",
-	"apihelp-collection+suggestarticleaction-param-suggestaction": "One of 'add', 'remove', or 'ban'. 'add' adds an article to the collection and suggestions and unbans it. 'remove' removes an added article and bans it. 'ban' bans an article from suggestions",
-	"apihelp-collection+suggestundoarticleaction-example": "Undos an added article action",
-	"apihelp-collection+suggestundoarticleaction-summary": "Api module to undo actions done from suggestarticleaction",
+	"apihelp-collection+getcollection-summary": "API module for listing the current pages in a collection",
+	"apihelp-collection+addarticle-example": "Add a page to the collection.",
+	"apihelp-collection+addarticle-summary": "API module for adding a page to the collection",
+	"apihelp-collection+settitles-example": "Set the collection's title and subtitle",
+	"apihelp-collection+settitles-settings-example": "Set the collection's title, subtitle, and settings",
+	"apihelp-collection+settitles-summary": "API module for setting the collection's title, subtitle, and settings",
+	"coll-api-addarticle-article-not-added": "The page was not added to the collection. Make sure the title is in the specified namespace or check if the page already exist in the collection.",
+	"apihelp-collection+removearticle-example": "Remove a page from the collection.",
+	"apihelp-collection+removearticle-summary": "API module for removing a page from the collection",
+	"coll-api-removearticle-article-not-removed": "The page was not removed from the collection. Make sure the title is in the specified namespace or check if the page does not exist in the collection.",
+	"apihelp-collection+addcategory-example": "Add pages from a given category to a user's collection.",
+	"apihelp-collection+addcategory-summary": "API module for adding pages from a given category to a user's collection.",
+	"apihelp-collection+suggestarticleaction-example": "Adds a page to the collection and the suggestions",
+	"apihelp-collection+suggestarticleaction-summary": "API module to interact with suggestions",
+	"apihelp-collection+suggestarticleaction-param-suggestaction": "One of 'add', 'remove', or 'ban'. 'add' adds a page to the collection and suggestions and unbans it. 'remove' removes an added page and bans it. 'ban' bans a page from suggestions.",
+	"apihelp-collection+suggestundoarticleaction-example": "Undos an added page action",
+	"apihelp-collection+suggestundoarticleaction-summary": "API module to undo actions done from suggestarticleaction",
 	"apihelp-collection+suggestundoarticleaction-param-lastaction": "One of 'add', 'remove', or 'ban'.",
-	"coll-api-addcategory-category-does-not-exist": "The category you are trying to add articles from does not exist, is invalid or has articles more than the limit specified.",
+	"coll-api-addcategory-category-does-not-exist": "The category from which you are trying to add pages does not exist, is invalid, or has more pages than the limit specified.",
 	"apihelp-collection+addchapter-example": "Add a chapter to the collection.",
-	"apihelp-collection+addchapter-summary": "Api module for adding a chapter to the collection",
+	"apihelp-collection+addchapter-summary": "API module for adding a chapter to the collection",
 	"apihelp-collection+renamechapter-example": "Rename a chapter in the user's collection.",
-	"apihelp-collection+renamechapter-summary": "Api module for renaming a chapter in the user's collection",
+	"apihelp-collection+renamechapter-summary": "API module for renaming a chapter in the user's collection",
 	"apihelp-collection+clearcollection-example": "Clears collection and suggestions",
-	"apihelp-collection+clearcollection-summary": "Api module for clearing the collection and suggestions",
-	"apihelp-collection+setsorting-example": "In a collection of 3 items, Swap the first and second item",
-	"apihelp-collection+setsorting-deletion-example": "In a collection of 3 items, make the 3rd item first and delete the 2nd item",
-	"apihelp-collection+setsorting-summary": "Api module for reordering items in a collection",
+	"apihelp-collection+clearcollection-summary": "API module for clearing the collection and the suggestions",
+	"apihelp-collection+setsorting-example": "In a collection of 3 items, swap the first and second item",
+	"apihelp-collection+setsorting-deletion-example": "In a collection of 3 items, make the 3rd item first, and delete the 2nd item",
+	"apihelp-collection+setsorting-summary": "API module for reordering items in a collection",
 	"apihelp-collection+setsorting-param-items": "Items should be listed using their old index and ordered by their new position",
-	"apihelp-collection+sortitems-example": "Sort collection articles alphabetically",
-	"apihelp-collection+sortitems-summary": "Api module to sort articles in collection alphabetically. Articles within chapters are grouped and sorted together",
-	"apihelp-collection+getpopupdata-example": "Gets a popup to add/remove an article to the collection",
-	"apihelp-collection+getpopupdata-summary": "Api module to get data and html to construct a popup",
+	"apihelp-collection+sortitems-example": "Sort collection pages alphabetically",
+	"apihelp-collection+sortitems-summary": "API module to sort pages in a collection alphabetically. Pages within chapters are grouped and sorted together.",
+	"apihelp-collection+getpopupdata-example": "Gets a popup to add a page to the collection or to remove it",
+	"apihelp-collection+getpopupdata-summary": "API module to get data and HTML to construct a popup",
 	"apihelp-collection+removeitem-example": "Remove an item from the collection provided an index or index 0 by default.",
-	"apihelp-collection+removeitem-summary": "Api module for removing an item from the collection index-wise via the Special:Book page.",
+	"apihelp-collection+removeitem-summary": "API module for removing an item from the collection index-wise via the Special:Book page.",
 	"apihelp-collection-param-submodule": "Submodule for performing various operations on a wiki user's collection.",
-	"apihelp-collection-summary": "Api module for performing various operations on a wiki user's collection.",
+	"apihelp-collection-summary": "API module for performing various operations on a wiki user's collection.",
 	"apihelp-collection+getbookcreatorboxcontent-example": "Get book creator box content of the user's collection.",
-	"apihelp-collection+getbookcreatorboxcontent-summary": "Api submodule for grabbing the box content of the user's book creator box special page.",
-	"apihelp-collection+postcollection-example": "Post articles to a user's collection",
-	"apihelp-collection+postcollection-summary": "Api module for posting articles to a user's collection",
+	"apihelp-collection+getbookcreatorboxcontent-summary": "API submodule for grabbing the box content of the user's book creator box special page.",
+	"apihelp-collection+postcollection-example": "Post pages to a user's collection",
+	"apihelp-collection+postcollection-summary": "API module for posting pages to a user's collection",
 	"coll-api-invalid-collection": "Invalid collection received."
 }
