Replace sortable with bare bones up and down arrows
Since jquery.ui is deprecated and the extension is maintained
I think we should disable the sortable functionality
and instead use up and down arrows to provide this functionality

Bug: T49145
Change-Id: Ie6333fdac7dc9d22674eac6b23d82fd25b01f563

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -34,7 +34,7 @@
 	"coll-title": "Title:",
 	"coll-subtitle": "Subtitle:",
 	"coll-contents": "Contents",
-	"coll-drag_and_drop": "Use drag & drop to reorder wiki pages and chapters",
+	"coll-drag_and_drop": "Use arrow buttons to reorder wiki pages and chapters",
 	"coll-create_chapter": "Create chapter",
 	"coll-sort_alphabetically": "Sort alphabetically",
 	"coll-rename": "Rename",
