Add missing apihelp messages for parameters
Bug: T342644
Change-Id: I0f548b47121e07dd4199428d015df3da85166843

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -8,26 +8,41 @@
 	"apihelp-collection+getcollection-summary": "API module for listing the current pages in a collection",
 	"apihelp-collection+addarticle-example": "Add a page to the collection.",
 	"apihelp-collection+addarticle-summary": "API module for adding a page to the collection",
+	"apihelp-collection+addarticle-param-namespace": "Namespace of page to add",
+	"apihelp-collection+addarticle-param-title": "Title of page to add",
+	"apihelp-collection+addarticle-param-oldid": "Oldid of page to add",
 	"apihelp-collection+settitles-example": "Set the collection's title and subtitle",
 	"apihelp-collection+settitles-settings-example": "Set the collection's title, subtitle, and settings",
 	"apihelp-collection+settitles-summary": "API module for setting the collection's title, subtitle, and settings",
+	"apihelp-collection+settitles-param-title": "Title of the collection",
+	"apihelp-collection+settitles-param-subtitle": "Subtitle of the collection",
+	"apihelp-collection+settitles-param-settings": "Settings for the collection",
 	"coll-api-addarticle-article-not-added": "The page was not added to the collection. Make sure the title is in the specified namespace or check if the page already exist in the collection.",
 	"apihelp-collection+removearticle-example": "Remove a page from the collection.",
 	"apihelp-collection+removearticle-summary": "API module for removing a page from the collection",
+	"apihelp-collection+removearticle-param-namespace": "Namespace of page to remove",
+	"apihelp-collection+removearticle-param-title": "Title of page to remove",
+	"apihelp-collection+removearticle-param-oldid": "Oldid of page to remove",
 	"coll-api-removearticle-article-not-removed": "The page was not removed from the collection. Make sure the title is in the specified namespace or check if the page does not exist in the collection.",
 	"apihelp-collection+addcategory-example": "Add pages from a given category to a user's collection.",
 	"apihelp-collection+addcategory-summary": "API module for adding pages from a given category to a user's collection.",
+	"apihelp-collection+addcategory-param-title": "Category to add",
 	"apihelp-collection+suggestarticleaction-example": "Adds a page to the collection and the suggestions",
 	"apihelp-collection+suggestarticleaction-summary": "API module to interact with suggestions",
 	"apihelp-collection+suggestarticleaction-param-suggestaction": "One of 'add', 'remove', or 'ban'. 'add' adds a page to the collection and suggestions and unbans it. 'remove' removes an added page and bans it. 'ban' bans a page from suggestions.",
+	"apihelp-collection+suggestarticleaction-param-title": "Title of a page",
 	"apihelp-collection+suggestundoarticleaction-example": "Undoes an added page action",
 	"apihelp-collection+suggestundoarticleaction-summary": "API module to undo actions done from suggestarticleaction",
 	"apihelp-collection+suggestundoarticleaction-param-lastaction": "One of 'add', 'remove', or 'ban'.",
+	"apihelp-collection+suggestundoarticleaction-param-title": "Title of a page",
 	"coll-api-addcategory-category-does-not-exist": "The category from which you are trying to add pages does not exist, is invalid, or has more pages than the limit specified.",
 	"apihelp-collection+addchapter-example": "Add a chapter to the collection.",
 	"apihelp-collection+addchapter-summary": "API module for adding a chapter to the collection",
+	"apihelp-collection+addchapter-param-chaptername": "Name of chapter to add",
 	"apihelp-collection+renamechapter-example": "Rename a chapter in the user's collection.",
 	"apihelp-collection+renamechapter-summary": "API module for renaming a chapter in the user's collection",
+	"apihelp-collection+renamechapter-param-index": "Index of chapter to rename",
+	"apihelp-collection+renamechapter-param-chaptername": "Name of chapter to rename",
 	"apihelp-collection+clearcollection-example": "Clears collection and suggestions",
 	"apihelp-collection+clearcollection-summary": "API module for clearing the collection and the suggestions",
 	"apihelp-collection+setsorting-example": "In a collection of 3 items, swap the first and second item",
@@ -38,13 +53,19 @@
 	"apihelp-collection+sortitems-summary": "API module to sort pages in a collection alphabetically. Pages within chapters are grouped and sorted together.",
 	"apihelp-collection+getpopupdata-example": "Gets a popup to add a page to the collection or to remove it",
 	"apihelp-collection+getpopupdata-summary": "API module to get data and HTML to construct a popup",
+	"apihelp-collection+getpopupdata-param-title": "Title of a page",
 	"apihelp-collection+removeitem-example": "Remove an item from the collection provided an index or index 0 by default.",
 	"apihelp-collection+removeitem-summary": "API module for removing an item from the collection index-wise via the Special:Book page.",
+	"apihelp-collection+removeitem-param-index": "Index of item to remove",
 	"apihelp-collection-param-submodule": "Submodule for performing various operations on a wiki user's collection.",
 	"apihelp-collection-summary": "API module for performing various operations on a wiki user's collection.",
 	"apihelp-collection+getbookcreatorboxcontent-example": "Get book creator box content of the user's collection.",
 	"apihelp-collection+getbookcreatorboxcontent-summary": "API submodule for grabbing the box content of the user's book creator box special page.",
+	"apihelp-collection+getbookcreatorboxcontent-param-hint": "Hint shown in the creator box",
+	"apihelp-collection+getbookcreatorboxcontent-param-oldid": "Oldid of a collection",
+	"apihelp-collection+getbookcreatorboxcontent-param-pagename": "Title of a page",
 	"apihelp-collection+postcollection-example": "Post pages to a user's collection",
 	"apihelp-collection+postcollection-summary": "API module for posting pages to a user's collection",
+	"apihelp-collection+postcollection-param-collection": "Name of a collection",
 	"coll-api-invalid-collection": "Invalid collection received."
 }
