--- a/i18n/en.json
+++ b/i18n/en.json
@@ -173,11 +173,8 @@
 	"coll-attribution-page": "<h1>Text and image sources, contributors, and licenses</h1>\n<h2>Text</h2>\n$1<h2>Images</h2>\n$2\n<h2>Content license</h2>\n$3",
 	"coll-article-attribution": "<b>$1</b> <i>Source:</i> $2 <i>Contributors:</i> $3",
 	"coll-image-attribution": "<b>$1</b> <i>Source:</i> $2 <i>License:</i> $3 <i>Contributors:</i> $4 <i>Original artist:</i> $5",
-	"coll-warning-disable-pdf-title": "Book Creator is undergoing changes",
-	"coll-warning-disable-pdf-text": "Due to severe issues with our existing system, the Book Creator will no longer support saving a book as a PDF.",
-	"coll-warning-learn-more": "Learn more",
 	"coll-notice-download-pdf-title": "Download single pages",
-	"coll-notice-download-pdf-text": "While the Book Creator PDF rendering is disabled, you can try '''''Download as PDF''''' from the sidebar tools for individual articles.",
+	"coll-notice-download-pdf-text": "While the Book Creator doesn't support PDF rendering ([[mw:Reading/Web/PDF_Functionality|learn more]]), you can try '''''Download as PDF''''' from the sidebar tools for individual articles.",
 	"coll-toc-title": "Table of Contents",
 	"coll-contributors-title": "Contributors",
 	"coll-images-title": "Images",
